public class PizzaFromageStyleBrest extends Pizza {
    PizzaFromageStyleBrest() {
        super();
        nom = "Pizza sauce style brest et fromage";
    }
}
