public class PizzaFromageStyleStrasbourg extends Pizza {
    PizzaFromageStyleStrasbourg() {
        super();
        nom = "Pizza pâte Strasbourg et fromage";
    }
}
