public class PizzaGrecqueStyleBrest extends Pizza {
    PizzaGrecqueStyleBrest() {
        super();
        nom = "Pizza sauce style brest et grecque";
    }
}
