public class PizzaGrecqueStyleStrasbourg extends Pizza {
    PizzaGrecqueStyleStrasbourg() {
        super();
        nom = "Pizza pâte Strasbourg et grecque";
    }
}
