@startuml

title __TP3's Class Diagram__\n

abstract class Pizza {
  ~ garnitures : ArrayList<String>
  ~ nom : String
  ~ pate : String
  ~ sauce : String
  + getNom()
  ~ couper()
  ~ cuire()
  ~ emballer()
  ~ preparer()
}

class PizzaFromageStyleBrest {
  ~ PizzaFromageStyleBrest()
}

class PizzaFromageStyleStrasbourg {
  ~ PizzaFromageStyleStrasbourg()
}

class PizzaGrecqueStyleBrest {
  ~ PizzaGrecqueStyleBrest()
}

class PizzaGrecqueStyleStrasbourg {
  ~ PizzaGrecqueStyleStrasbourg()
}

abstract class Pizzeria {
  + commanderPizza()
  {abstract} # creerPizza()
}

class PizzeriaBrest {
  # creerPizza()
}

class PizzeriaStrasbourg {
  # creerPizza()
}

PizzaFromageStyleBrest -up-|> Pizza
PizzaFromageStyleStrasbourg -up-|> Pizza
PizzaGrecqueStyleBrest -up-|> Pizza
PizzaGrecqueStyleStrasbourg -up-|> Pizza
PizzeriaBrest -up-|> Pizzeria
PizzeriaStrasbourg -up-|> Pizzeria

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
